ide/static/ide/css/ide.css
/* ... */
/* Override white icons on the light themes. */
.cm-s-eclipse .icon-white,
.cm-s-solarized.cm-s-light .icon-white{
    /* We have to hard-code this entire thing from here, unfortunately. */
    background-image: url(//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/img/glyphicons-halflings.png)
}

.fullscreen-icon {
    position: absolute;
    right: 25px;
    top: 10px;
    cursor: pointer;
    z-index: 3;

    width: 18px;
    height: 13px;
    background-image: url('../img/fullscreen_open.png');
}


.CodeMirror.FullScreen .fullscreen-icon {
    background-image: url('../img/fullscreen_close.png');
}

.fullscreen-fade {
   opacity: 0.1;
   transition: opacity .25s ease-in-out;
   -moz-transition: opacity .25s ease-in-out;
   -webkit-transition: opacity .25s ease-in-out;
}

.fullscreen-fade:hover {
    opacity: 1;
}

.fullscreen-icon-tooltip {
    display:none;
    color: #aaa;
    position: absolute;
    right: 35px;
    width: 120px;
    top: 7px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

.CodeMirror.FullScreen {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: absolute;
    border: none;
    border-radius: 0;
    z-index: 10000; /* Needs to be greater than 9999... */
}

.screenshot-holder {
    height: 272px;
    width: 236px;
    margin-left: auto;
    margin-right: auto;
    padding-top: 104px;
}

.screenshot-holder-tintin-red,
.screenshot-holder-unknown {
    background-image: url('../img/pebbles/tintin-red.png')
}

.screenshot-holder-tintin-orange {
    background-image: url('../img/pebbles/tintin-orange.png')
}

.screenshot-holder-tintin-black {
    background-image: url('../img/pebbles/tintin-black.png');
}

.screenshot-holder-tintin-white {
    background-image: url('../img/pebbles/tintin-white.png');
}

.screenshot-holder-tintin-grey {
    background-image: url('../img/pebbles/tintin-grey.png');
}

.screenshot-holder-bianca-black {
    background-image: url('../img/pebbles/bianca-black.png');
}

.screenshot-holder-bianca-silver {
    background-image: url('../img/pebbles/bianca-silver.png');
}

.screenshot-holder-tintin-blue {
    background-image: url('../img/pebbles/tintin-blue.png');
}

.screenshot-holder-tintin-pink {
    background-image: url('../img/pebbles/tintin-pink.png');
}

.screenshot-holder-tintin-green {
    background-image: url('../img/pebbles/tintin-green.png');
}

.screenshot-holder-snowy-black {
    background-image: url('../img/pebbles/snowy-black.png');
}

.screenshot-holder-snowy-white {
    background-image: url('../img/pebbles/snowy-white.png');
}

.screenshot-holder-snowy-red {
    background-image: url('../img/pebbles/snowy-red.png');
}

.screenshot-holder-bobby-black {
    background-image: url('../img/pebbles/bobby-black.png');
}

.screenshot-holder-bobby-silver {
    background-image: url('../img/pebbles/bobby-silver.png');
}

.screenshot-holder-bobby-gold {
    background-image: url('../img/pebbles/bobby-gold.png');
}

.screenshot-holder-spalding-20mm-black {
    background-image: url('../img/pebbles/spalding-20mm-black.png');
}

.screenshot-holder-spalding-20mm-silver {
    background-image: url('../img/pebbles/spalding-20mm-silver.png');
}

.screenshot-holder-spalding-14mm-black {
    background-image: url('../img/pebbles/spalding-14mm-black.png');
}

.screenshot-holder-spalding-14mm-silver {
    background-image: url('../img/pebbles/spalding-14mm-silver.png');
}

.screenshot-holder-spalding-14mm-rose-gold {
    background-image: url('../img/pebbles/spalding-14mm-rose-gold.png');
}

.screenshot-holder.screenshot-holder-snowy-black,
.screenshot-holder.screenshot-holder-snowy-red,
.screenshot-holder.screenshot-holder-snowy-white,
.screenshot-holder.screenshot-holder-bobby-black,
.screenshot-holder.screenshot-holder-bobby-silver,
.screenshot-holder.screenshot-holder-bobby-gold {
    padding-top: 91px;
    padding-left: 4px;
}

.screenshot-holder.screenshot-holder-spalding-14mm-silver,
.screenshot-holder.screenshot-holder-spalding-14mm-black,
.screenshot-holder.screenshot-holder-spalding-20mm-silver,
.screenshot-holder.screenshot-holder-spalding-20mm-black,
.screenshot-holder.screenshot-holder-spalding-14mm-rose-gold {
    padding-top: 86px;
    height: 247px;
    width: 251px;
}

.field-help {
    vertical-align: middle;
    margin-bottom: 5px;
    margin-left: 10px;
}

#help-prompt-holder {
    z-index: 10001;
    position: relative;
}

#help-prompt-holder > .popover {
    width: 300px;
}

/* Make the code-fold arrow light-gray */
.CodeMirror-foldgutter-open,
.CodeMirror-foldgutter-folded {
  color: #d0d0d0;
}

#fuzzy-prompt .modal-footer {
    padding: 0 0 10px 0;
    text-align: left;
}

#fuzzy-results > div {

    line-height: 28px;
    cursor: pointer;
    cursor: hand;
    padding-left: 25px;
}

#fuzzy-results > div.selected {
    color: white;
    background-color: #333;
}

#fuzzy-prompt-input-value {
    width: 100%;
}

#fuzzy-prompt-input-value:focus{
    outline: 0;
}

.padded-modal-header {
    padding: 10px 25px 10px 10px;
}

.filter {
    display: inline-block;
    padding: 6px;
    background-color: white;
    border-radius: 5px;
    margin-right: 5px;
}

button#add-filter {
    width: 2em;
    margin-right: 15px;
}

.text-wrap {
    margin-left: 170px;
}
.text-wrap.disabled {
    background-color: #dfdfdf;
}

.tag-edit textarea {
    width: 450px;
    height: 37px;
}

.edit-resource-target-options > div {
    float: left;
}
.edit-resource-target-options:after {
    clear: both;
    content: "";
    display: table;
}

.pane-boxes {
    width: 100%;
}
.pane-boxes> div {
    float: left;
}
.pane-3-boxes > div {
    width: 33%;
}
.image-platform-preview h4 {
    text-align: center;
    margin-bottom: 1em;
}

.pane-boxes img {
    display: block;
    margin: auto;
    max-width: 97%;
    box-sizing: border-box;
}

.label-list {
    line-height: 30px;
    min-height: 36px;
}

/*TODO: decide on some colours*/
.label-aplite {
    background-color: #00B293;
}
/* ... */

